M-Secure Web App

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MSecureWeb</title>
+  <title>M-Secure</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="generate password, password generator, secure password, open Ssurce, security, encryption, msecure, m-secure">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
